--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,37 +5,37 @@ server:
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    #MySQL配置
-    driverClassName: com.mysql.jdbc.Driver
+    #MySQL????
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/rbac_demo?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: P@ss1234
     hikari:
       minimum-idle: 5
-      # 空闲连接存活最大时间，默认600000（10分钟）
+      # ???????????????????600000??10?????
       idle-timeout: 180000
-      # 连接池最大连接数，默认是10
+      # ?????????????????????10
       maximum-pool-size: 10
-      # 此属性控制从池返回的连接的默认自动提交行为,默认值：true
+      # ???????????????????????????????,??????true
       auto-commit: true
-      # 连接池名称
+      # ?????????
       pool-name: MyHikariCP
-      # 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+      # ?????????????????????????????0???????????????????1800000??30????
       max-lifetime: 1800000
-      # 数据库连接超时时间,默认30秒，即30000
+      # ??????????????,???30????30000
       connection-timeout: 30000
       connection-test-query: SELECT 1
-    #oracle配置
+    #oracle????
     #    driverClassName: oracle.jdbc.OracleDriver
     #    url: jdbc:oracle:thin:@47.100.206.162:1521:xe
     #    username: renren
     #    password: 123456
-    #SQLServer配置
+    #SQLServer????
     #    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
     #    url: jdbc:sqlserver://192.168.10.10:1433;DatabaseName=renren_fast
     #    username: sa
     #    password: 123456
-    #PostgreSQL配置
+    #PostgreSQL????
   #    driverClassName: org.postgresql.Driver
   #    url: jdbc:postgresql://192.168.10.10:5432/renren_fast
   #    username: postgres
@@ -57,7 +57,7 @@ pagehelper:
   params: count=countSql
 
 
-#指定数据库，可选值有【mysql、oracle、sqlserver、postgresql】
+#?????????????小?mysql??oracle??sqlserver??postgresql??
 renren:
   database: mysql
 
