add mapstruct add mybatis-plus audit add exception

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,4 +60,7 @@ pagehelper:
 #?????????????С?mysql??oracle??sqlserver??postgresql??
 renren:
   database: mysql
-
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: is_deleted
